# swarm-sim

./: .gitignore  Cargo.toml  README.md  ai-judgment.md  config.example.toml  events.example.toml  story.md  todo.md
court/: index.html  style.css  sw.js
court/src/: main.js
court/src/scene/: animations.js  camera.js  characters.js  scene.js
court/src/state/: store.js  websocket.js
court/src/ui/: hud.js  labels.js  launcher.js  sidebar.js  transcript.js  tts.js  verdict.js
court/src/utils/: colors.js  math.js
data/trials/: 2554cfd7.json  83118a2d.json  a1608c05.json  e174fc13.json
src/: agent.rs  config.rs  engine.rs  god_eye.rs  launcher.rs  llm.rs  main.rs  metrics.rs  output.rs  parser.rs  report.rs  server.rs  trial.rs  trial_engine.rs  trial_store.rs  world.rs
web/: app.js  components.js  index.html  style.css
